# ChangeLog for dev-python/fancycompleter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild:
  Removed Python 2.4 support.

*fancycompleter-0.3 (27 Feb 2012)

  27 Feb 2012; James Rowe <jnrowe@gmail.com> +fancycompleter-0.3.ebuild:
  Version bump [557].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  04 Apr 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded x86.

  03 Apr 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded amd64.

  03 Mar 2011; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild:
  Keyworded ~x86.

*fancycompleter-0.2 (02 Mar 2011)

  02 Mar 2011; James Rowe <jnrowe@gmail.com> +fancycompleter-0.2.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me. Required by pdbpp.
