@@ -1,7 +1,7 @@
-DEFINED_PHASES=compile install postinst postrm prepare test
+DEFINED_PHASES=compile install postinst postrm prepare setup test
 DEPEND=dev-python/setuptools >=app-admin/eselect-python-20091230 =dev-lang/python-2* test? ( dev-python/nose )
 DESCRIPTION=Colourful TAB completion for Python prompt
-EAPI=3
+EAPI=4
 HOMEPAGE=http://pypi.python.org/pypi/fancycompleter/
 IUSE=test
 KEYWORDS=amd64 x86
@@ -10,4 +10,4 @@ RDEPEND=dev-python/pyrepl >=app-admin/eselect-python-20091230 =dev-lang/python-2
 SLOT=0
 SRC_URI=mirror://pypi/f/fancycompleter/fancycompleter-0.2.tar.gz
 _eclasses_=distutils	15ae23f6f8219a009bfcfff7724fe727	eutils	ba24d79270ea0022703f16b5de80051c	jnrowe-pypi	c6b06bd5e6250ef1ef368932ebd260cf	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python	dc3993dc1961bbb13c11bb835390ca29	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
-_md5_=64a2c7fa6b7d958101df9f26c652e4e9
+_md5_=b86f3cfbcfa0fcd0363dedf36bfe968d
