@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.2.ebuild,
+  fancycompleter-0.3.ebuild:
+  Switched to EAPI4.
+
   03 Mar 2012; James Rowe <jnrowe@gmail.com> fancycompleter-0.3.ebuild:
   Removed Python 2.4 support.
 
